<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:padding="16dp" tools:context=".Fragment.RegisterFragment">
    <!--  Full Name Input Field  -->
    <!--  Email Input Field  -->
    <androidx.appcompat.widget.AppCompatEditText android:id="@+id/fullNameEditText" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="144dp" android:hint="@string/full_name_hint" android:importantForAccessibility="yes" android:inputType="textPersonName" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatEditText android:id="@+id/emailEditText" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:hint="@string/email_hint" android:importantForAccessibility="yes" android:inputType="textEmailAddress" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/fullNameEditText"/>
    <!--  Password Input Field  -->
    <androidx.appcompat.widget.AppCompatEditText android:id="@+id/passwordEditText" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:hint="@string/password_hint" android:importantForAccessibility="yes" android:inputType="textPassword" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/emailEditText"/>
    <!--  Confirm Password Input Field  -->
    <androidx.appcompat.widget.AppCompatEditText android:id="@+id/confirmPasswordEditText" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:hint="@string/confirm_password_hint" android:importantForAccessibility="yes" android:inputType="textPassword" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/passwordEditText"/>
    <!--  Register Button  -->
    <Button android:id="@+id/BtnregisterButton" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="44dp" android:text="@string/register_button_text" android:textColor="#ffffff" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditText"/>
    <!--  Sign In Link  -->
    <TextView android:id="@+id/TvsignInLink" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/sign_in_text" android:textColor="@android:color/holo_blue_dark" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/BtnregisterButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>