<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/main" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:fitsSystemWindows="true" tools:context=".MainActivity">
    <!--  Container cho các Button  -->
    <FrameLayout android:id="@+id/fragment_container" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="3"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:paddingTop="1dp" android:weightSum="4">
        <!--  Home Button with Icon  -->
        <Button android:id="@+id/btbHome" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center" android:text="@string/Home" android:textSize="14sp" android:textColor="#FFFFFF" android:background="@drawable/btn_background" android:textStyle="bold" android:drawableTop="@drawable/baseline_home_24" android:layout_marginEnd="0dp" android:paddingTop="10dp" android:paddingBottom="10dp"/>
        <!--  Add Listing Button with Icon  -->
        <Button android:id="@+id/btnAdd_Listing" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center" android:text="@string/Add_Listing" android:textSize="14sp" android:textColor="#FFFFFF" android:background="@drawable/btn_background" android:textStyle="bold" android:drawableTop="@drawable/outline_add_ad_24" android:layout_marginEnd="0dp" android:paddingTop="10dp" android:paddingBottom="10dp"/>
        <!--  Notifications Button with Icon  -->
        <Button android:id="@+id/btnNotifications" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center" android:text="@string/Notifications" android:textSize="14sp" android:textColor="#FFFFFF" android:background="@drawable/btn_background" android:textStyle="bold" android:drawableTop="@drawable/outline_add_alert_24" android:layout_marginEnd="0dp" android:paddingTop="10dp" android:paddingBottom="10dp"/>
        <!--  Profile Button with Icon  -->
        <Button android:id="@+id/btnProfile" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center" android:text="@string/Profile" android:textSize="14sp" android:textColor="#FFFFFF" android:background="@drawable/btn_background" android:textStyle="bold" android:drawableTop="@drawable/outline_account_circle_24" android:layout_marginEnd="0dp" android:paddingTop="10dp" android:paddingBottom="25.7dp"/>
    </LinearLayout>
</LinearLayout>